Update chain.ini hashes
Signed-off-by: Rich Megginson <rmeggins@redhat.com>

--- a/chain/chain.ini
+++ b/chain/chain.ini
@@ -2,7 +2,7 @@
 bomversion = 1.0.5
 
 [com.redhat.rcm-openshift-elasticsearch-plugin-bom]
-scmurl = git://git.app.eng.bos.redhat.com/openshift-elasticsearch-plugin.git?bom#
+scmurl = git://git.app.eng.bos.redhat.com/openshift-elasticsearch-plugin.git?bom#3b7cd7d0fce766be4b9e3b0df16e3067d424b9a8
 properties = version.suffix=redhat-1
 
 [io.fabric8.elasticsearch-openshift-elasticsearch-plugin]
