Update chain.ini hashes
Signed-off-by: Rich Megginson <rmeggins@redhat.com>

--- a/chain/chain.ini
+++ b/chain/chain.ini
@@ -1,8 +1,8 @@
 [DEFAULT]
-bomversion = 1.0.5
+bomversion = 1.0.5.redhat-1
 
 [com.redhat.rcm-openshift-elasticsearch-plugin-bom]
-scmurl = git://git.app.eng.bos.redhat.com/openshift-elasticsearch-plugin.git?bom#e67bb63ac2ec1197d372b200c0248d5d7804c5e5
+scmurl = git://git.app.eng.bos.redhat.com/openshift-elasticsearch-plugin.git?bom#e19637eeb1122299a7d02ed345ca3edd0e9ab6c8
 properties = version.suffix=redhat-1
 
 [io.fabric8.elasticsearch-openshift-elasticsearch-plugin]
